--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -2,17 +2,18 @@
 
 {% block body %}
 <div class="container">
-    <h3>Listing Existing Forms:</h3>
-
+    <div class="inline">
+        <h3>Forms</h3>
+        <a class="btn btn-small" href="{{ path( 'wgauditform_add' ) }}">Add a new form</a>
+    </div>
     <table class="table table-condensed table-hover">
+        <caption>List of existing Forms</caption>
         <thead>
             <tr>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Is the form Active?</th>
-                <th>View</th>
-                <th>Edit</th>
-                <th>Delete</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -21,24 +22,27 @@
                     <td>{{ form.title }}</td>
                     <td>{{ form.description }}</td>
                     <td>{% if  form.active == 1 %}
-                            <div>yes</div>
+                            <i class="icon-check"/>
                         {% else %}
-                            <div>No</div>
+                            <i class="icon-check-empty"/>
                         {% endif %}
-                    <td><a href="{{ path( 'wgauditform_view', { 'id': form.id } ) }}" class="btn btn-mini"><i class="icon-eye-open"/></a></td>
-                    <td><a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}" class="btn btn-mini"><i class="icon-edit"/></a></td>
-                    <td><a href="{{ path( 'wgauditform_delete', { 'id': form.id } ) }}" class="btn btn-mini"><i class="icon-remove"/></a></td>
+                    </td>
+                    <td>
+                        <div class="btn-group">
+                            <a class="btn btn-mini" href="{{ path( 'wgauditform_view', { 'id': form.id } ) }}"><i class="icon-eye-open"></i> View</a>
+                            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}"><i class="icon-pencil"></i> Edit</a></li>
+                                <li><a href="{{ path( 'wgauditform_delete', { 'id': form.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                            </ul>
+                        </div>
+                    </td>
                 </tr>
             {% else %}
                 <tr>
                     <td colspan="4">no forms yet</td>
                 </tr>
             {% endfor %}
-                <tr>
-                    <td colspan="8" align="center">
-                        <a class="btn btn-small" href="{{ path( 'wgauditform_add' ) }}">Add a new form</a>
-                    </td>
-                </tr>
         </tbody>
     </table>
 </div>
