--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -3,35 +3,42 @@
 {% block body %}
 <div class="container">
     <h3>Existing Fields</h3>
-
+    <a href="{{ path( 'wgauditformfield_add' ) }}" class="btn btn-small">Add a new field</a>
     <table class="table table-condensed table-hover">
         <caption>List of existing fields</caption>
         <tbody>
             {% for field in fields %}
                 <tr>
-                    <td>Title: </td>
+                    <td><strong>Title: </strong></td>
                     <td>{{ field.title }}</td>
-                    <td>Section: </td>
+                    <td><strong>Section: </strong></td>
                     <td>{{ field.section }}</td>
-                    <td>Weight: </td>
+                    <td><strong>Weight: </strong></td>
                     <td>{{ field.weight }}</td>
-                    <td>Fatal: </td>
+                    <td><strong>Fatal: </strong></td>
                     <td>{% if field.fatal == 1 %}
                             <div>Yes</div>
                         {% else %}
                             <div>No</div>
                         {% endif %}
                     </td>
-                    <td><a href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}" class="btn btn-mini"><i class="icon-eye-open"/></a></td>
-                    <td><a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}" class="btn btn-mini"><i class="icon-edit"/></a></td>
-                    <td><a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}" class="btn btn-mini"><i class="icon-remove"/></a></td>
+                    <td>
+                        <div class="btn-group">
+                            <a class="btn btn-mini" href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}"><i class="icon-eye-open"></i> View</a></li>
+                            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}"><i class="icon-pencil"></i> Edit</a></li>
+                                <li><a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                            </ul>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
-                    <td>Description: </td>
+                    <td><strong>Description: </strong></td>
                     <td colspan="10">{{ field.description }}</td>
                 </tr>
                 <tr>
-                    <td>Scores: </td>
+                    <td><strong>Scores: </strong></td>
                     <td colspan="10">{% for score, label in field.scores %}
                             <div>
                                 {{ score }}: {{ label }}
@@ -44,12 +51,9 @@
 
             {% else %}
                 <tr>
-                    <td colspan="9" align="center">no fields yet</td>
+                    <td colspan="8" align="center">no fields yet</td>
                 </tr>
             {% endfor %}
-            <tr>
-                <td colspan="11" align="center"><a href="{{ path( 'wgauditformfield_add' ) }}" class="btn btn-small">Add a new field</a></td>
-            </tr>
         </tbody>
     </table>
 </div>
