--- a/Resources/views/AuditFormField/view.html.twig
+++ b/Resources/views/AuditFormField/view.html.twig
@@ -3,30 +3,37 @@
 {% block body %}
 <div class="container">
     <h3>Field view</h3>
+    <div class="btn-group">
+        <a class="btn btn-mini" href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}"><i class="icon-pencil"></i> Edit</a>
+        <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+        </ul>
+    </div>
     <table class="table table-condensed table-hover">
         <caption>Field ID number: {{ field.id }}</caption>
         <tbody>
             <tr>
-                <td>Title</td>
+                <td><strong>Title: </strong></td>
                 <td>{{ field.title }}</td>
-                <td>Section</td>
+                <td><strong>Section: </strong></td>
                 <td>{{ field.section }}</td>
-                <td>Weight</td>
+                <td><strong>Weight: </strong></td>
                 <td>{{ field.weight }}</td>
-                <td>Fatal</td>
+                <td><strong>Fatal: </strong></td>
                 <td>{% if field.fatal == 1 %}
-                        <div>Yes</div>
+                        <i class="icon-check"/>
                     {% else %}
-                        <div>No</div>
+                        <i class="icon-check-empty"/>
                     {% endif %}
                 </td>
             </tr>
             <tr>
-                <td>Description</td>
+                <td><strong>Description: </strong></td>
                 <td colspan="7">{{ field.description }}</td>
             </tr>
             <tr>
-                <td>Scores: </td>
+                <td><strong>Scores: </strong></td>
                 <td colspan="7">{% for score, label in field.scores %}
                         <div>
                             {{ score }}: {{ label }}
